Chore: backporting to Java 8